# pulsar-search

./: .gitattributes  .gitignore  AUTHORS.md  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  codemeta.json  pyproject.toml  requirements-test.txt  requirements.txt  setup.py
.github/workflows/: python-app.yml
examples/: crab_search_mock.py
pulsar/: __init__.py  config.py  filters.py  flux_estimator.py  flux_stats.py  instrument.py  io.py  map.py  noise.py  pointing_models.py  polarization.py  signal_profile.py  target.py  target_context.py  timing.py  tod.py
pulsar/act/: act.py  calibration.py  io.py  map.py  noise_models.py  pointing_models.py  tod.py
pulsar/log/: log.py
pulsar/mock_instrument/: __init__.py  instrument.py
pulsar/search/: __init__.py  extension.py  result.py  scenario.py  search.py  storage.py
pulsar/targeting/: __init__.py  targeting.py
tests/: _act_stubs.py  conftest.py  fixtures.py  test_config.py  test_filters.py  test_flux_estimator.py  test_flux_stats.py  test_io.py  test_mock_instrument.py  test_mocks.py  test_noise.py  test_polarization.py  test_signal_profile.py  test_target.py  test_target_context.py  test_timing.py
tests/act/: test_act.py  test_calibration.py  test_io.py  test_map.py  test_noise_models.py  test_pointing_models.py  test_tod.py
tests/log/: test_log.py
tests/search/: fixtures.py  test_extension.py  test_result.py  test_scenario.py  test_search.py  test_storage.py
tests/targeting/: test_targeting.py
