[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pulsar-search"
version = "1.0.0"
description = "Targeted template search for pulsar signals in time-ordered telescope data, with injectable simulations and tooling for flux amplitude estimation."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "BSD-3-Clause" }
authors = [
    { name = "Louis Branch", email = "branch3e8@gmail.com" },
    { name = "Yilun Guan", email = "yilun.guan@utoronto.ca" },
    { name = "Ian Niebres", email = "ian.niebres@mail.utoronto.ca" },
]
keywords = [
    "astronomy",
    "pulsars",
    "flux estimation",
    "signal processing",
    "time-domain analysis",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "astropy>=5.1",
    "h5py>=3.7",
    "matplotlib>=3.6",
    "numpy>=1.21.5",
    "pandas>=2.0.3",
    "pixell>=0.16.0",
    "scipy>=1.10",
    "tomli>=2.2.1",
]

[project.optional-dependencies]
profiling = ["psutil>=5.9.2"]
parallel = ["mpi4py>=3.1.6"]
act = [
    "enlib @ git+https://github.com/amaurea/enlib.git",
    "enact @ git+https://github.com/amaurea/enact.git",
]
test = [
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
    "genbadge[coverage]>=1.1.1",
]

[project.urls]
Homepage = "https://github.com/louisbranch/pulsar-search"
Issues = "https://github.com/louisbranch/pulsar-search/issues"
Paper = "https://doi.org/10.48550/arXiv.2509.11960"

[tool.setuptools.packages.find]
include = ["pulsar*"]
exclude = ["tests*"]
